# DrugFlow

./: .gitignore  README.md  dock.py  main.py  pyproject.toml
configs/training/: drugdock.yml  drugdock_ood.yml
scripts/python/: evaluate_baselines.py
src/: sample_and_evaluate.py  train.py  utils.py
src/data/: merge_dpo_dataset.py  process_dataset_singlepocket.py  process_dpo_dataset.py  process_dpo_dataset_step1.py  process_dpo_dataset_step2.py
src/model/: lightning.py
src/sbdd_metrics/: evaluation.py  metrics.py
